# translateNvdaAddonsWithCrowdin

./: .gitignore  .gitmodules  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  README.md  buildVars.py  hash.json  l10n.json  main.py  pyproject.toml  readme.md  sha256.py  translateNvdaAddonsWithCrowdin.xliff
.github/: exportAddonToCrowdin.yml  setOutputs.py
.github/workflows/: checkTranslatorsComments.yml  crowdinL10n.yml  dependabotMerge.yml  exportAddonToCrowdin.yml  setOutputs.py
_addonL10n/Access8Math/ru/: Access8Math.po  Access8Math.xliff
_addonL10n/Access8Math/tr/: Access8Math.po
_addonL10n/Access8Math/zh_CN/: Access8Math.po
_addonL10n/BMI/fi/: BMI.po
_addonL10n/BMI/pt_PT/: BMI.po  BMI.xliff
_addonL10n/BMI/ru/: BMI.po  BMI.xliff
_addonL10n/BMI/tr/: BMI.po  BMI.xliff
_addonL10n/MSEdgeDiscardAnnouncements/fi/: MSEdgeDiscardAnnouncements.po
_addonL10n/MSEdgeDiscardAnnouncements/ru/: MSEdgeDiscardAnnouncements.po  MSEdgeDiscardAnnouncements.xliff
_addonL10n/MSEdgeDiscardAnnouncements/tr/: MSEdgeDiscardAnnouncements.po  MSEdgeDiscardAnnouncements.xliff
_addonL10n/MSEdgeDiscardAnnouncements/zh_CN/: MSEdgeDiscardAnnouncements.po  MSEdgeDiscardAnnouncements.xliff
_addonL10n/SentenceNav/fi/: SentenceNav.po
_addonL10n/SentenceNav/ru/: SentenceNav.po  SentenceNav.xliff
_addonL10n/SentenceNav/tr/: SentenceNav.po  SentenceNav.xliff
_addonL10n/SentenceNav/zh_CN/: SentenceNav.po
_addonL10n/beepKeyboard/fi/: beepKeyboard.po
_addonL10n/beepKeyboard/ru/: beepKeyboard.po  beepKeyboard.xliff
_addonL10n/beepKeyboard/tr/: beepKeyboard.po  beepKeyboard.xliff
_addonL10n/beepKeyboard/zh_CN/: beepKeyboard.po
_addonL10n/charInfo/fi/: charInfo.po
_addonL10n/charInfo/pt_PT/: charInfo.po  charInfo.xliff
_addonL10n/charInfo/ru/: charInfo.po  charInfo.xliff
_addonL10n/charInfo/tr/: charInfo.po  charInfo.xliff
_addonL10n/clipContentsDesigner/fi/: clipContentsDesigner.po
_addonL10n/clipContentsDesigner/ru/: clipContentsDesigner.po  clipContentsDesigner.xliff
_addonL10n/clipContentsDesigner/tr/: clipContentsDesigner.po  clipContentsDesigner.xliff
_addonL10n/clipContentsDesigner/zh_CN/: clipContentsDesigner.po  clipContentsDesigner.xliff
_addonL10n/columnsReview/fi/: columnsReview.po
_addonL10n/columnsReview/ru/: columnsReview.po  columnsReview.xliff
_addonL10n/columnsReview/tr/: columnsReview.po  columnsReview.xliff
_addonL10n/controlUsageAssistant/es/: controlUsageAssistant.po
_addonL10n/controlUsageAssistant/fi/: controlUsageAssistant.po
_addonL10n/controlUsageAssistant/pt_PT/: controlUsageAssistant.po  controlUsageAssistant.xliff
_addonL10n/controlUsageAssistant/ru/: controlUsageAssistant.po  controlUsageAssistant.xliff
_addonL10n/controlUsageAssistant/tr/: controlUsageAssistant.po  controlUsageAssistant.xliff
_addonL10n/controlUsageAssistant/zh_CN/: controlUsageAssistant.po  controlUsageAssistant.xliff
_addonL10n/controlUsageAssistant/zh_TW/: controlUsageAssistant.po  controlUsageAssistant.xliff
_addonL10n/cursorLocator/fi/: cursorLocator.po
_addonL10n/cursorLocator/pt_PT/: cursorLocator.po
_addonL10n/cursorLocator/ru/: cursorLocator.po  cursorLocator.xliff
_addonL10n/cursorLocator/tr/: cursorLocator.po  cursorLocator.xliff
_addonL10n/cursorLocator/zh_CN/: cursorLocator.po  cursorLocator.xliff
_addonL10n/cursorLocator/zh_TW/: cursorLocator.po
_addonL10n/customNotifications/fi/: customNotifications.po
_addonL10n/customNotifications/pt_PT/: customNotifications.po  customNotifications.xliff
_addonL10n/customNotifications/ru/: customNotifications.po  customNotifications.xliff
_addonL10n/customNotifications/tr/: customNotifications.po  customNotifications.xliff
_addonL10n/customNotifications/zh_CN/: customNotifications.po  customNotifications.xliff
_addonL10n/customNotifications/zh_TW/: customNotifications.po  customNotifications.xliff
_addonL10n/dayOfTheWeek/fi/: dayOfTheWeek.po
_addonL10n/dayOfTheWeek/ru/: dayOfTheWeek.po  dayOfTheWeek.xliff
_addonL10n/dayOfTheWeek/tr/: dayOfTheWeek.po  dayOfTheWeek.xliff
_addonL10n/dayOfTheWeek/zh_CN/: dayOfTheWeek.po  dayOfTheWeek.xliff
_addonL10n/dayOfTheWeek/zh_TW/: dayOfTheWeek.po
_addonL10n/debugHelper/fi/: debugHelper.po
_addonL10n/debugHelper/ru/: debugHelper.po  debugHelper.xliff
_addonL10n/debugHelper/tr/: debugHelper.po  debugHelper.xliff
_addonL10n/debugHelper/zh_CN/: debugHelper.po
_addonL10n/dropbox/fi/: dropbox.po
_addonL10n/dropbox/ru/: dropbox.po  dropbox.xliff
_addonL10n/dropbox/tr/: dropbox.po  dropbox.xliff
_addonL10n/eMule/fi/: eMule.po
_addonL10n/eMule/pt_PT/: eMule.xliff
_addonL10n/eMule/ru/: eMule.po  eMule.xliff
_addonL10n/eMule/tr/: eMule.po  eMule.xliff
_addonL10n/eMule/zh_CN/: eMule.po  eMule.xliff
_addonL10n/easyTableNavigator/fi/: easyTableNavigator.po
_addonL10n/easyTableNavigator/ru/: easyTableNavigator.po  easyTableNavigator.xliff
_addonL10n/easyTableNavigator/tr/: easyTableNavigator.po  easyTableNavigator.xliff
_addonL10n/easyTableNavigator/zh_CN/: easyTableNavigator.po  easyTableNavigator.xliff
_addonL10n/easyTableNavigator/zh_TW/: easyTableNavigator.po
_addonL10n/emoticons/es/: emoticons.po
_addonL10n/emoticons/es_CO/: emoticons.po
_addonL10n/emoticons/fi/: emoticons.po
_addonL10n/emoticons/pt_PT/: emoticons.po  emoticons.xliff
_addonL10n/emoticons/ru/: emoticons.po  emoticons.xliff
_addonL10n/emoticons/tr/: emoticons.po  emoticons.xliff
_addonL10n/emoticons/zh_CN/: emoticons.po  emoticons.xliff
_addonL10n/enhancedAnnotations/es/: enhancedAnnotations.po
_addonL10n/enhancedAnnotations/fi/: enhancedAnnotations.po
_addonL10n/enhancedAnnotations/pt_PT/: enhancedAnnotations.po  enhancedAnnotations.xliff
_addonL10n/enhancedAnnotations/ru/: enhancedAnnotations.po  enhancedAnnotations.xliff
_addonL10n/enhancedAnnotations/tr/: enhancedAnnotations.po  enhancedAnnotations.xliff
_addonL10n/enhancedTouchGestures/bg/: enhancedTouchGestures.po
_l10n/: crowdinSync.py  files.json  l10n.json  l10nUtil.py  markdownTranslate.py
addonTemplate.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+366 files in other folders)
