[project]
name = "translateNvdaAddonsWithCrowdin"
version = "0.1.0"
description = "Translate NVDA add-ons with Crowdin"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "crowdin-api-client==1.21.0",
    "lxml>=6.0.1",
    "markdown>=3.9",
    "markdown-link-attr-modifier==0.2.1",
    "mdx-gh-links==0.4",
    "mdx-truly-sane-lists==1.3",
    "nh3==0.2.19",
    "requests>=2.32.5",
]
